--- a/css/dom-ejercicios.css
+++ b/css/dom-ejercicios.css
@@ -107,3 +107,16 @@ img{
     background-color: var(--main-modal-color);
 }
 
+/**********Eventos del teclado**************/
+.stage{
+    display: flex;
+    min-height: 50vh;
+    background: var(--second-color);
+}
+.ball{
+    margin: auto;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    background: var(--main-color);
+}
