--- a/css/dom-ejercicios.css
+++ b/css/dom-ejercicios.css
@@ -268,3 +268,58 @@ img{
 .slider a:hover{
     color: #4d4d4d;
 }
+/**ScrollSpy**/
+@media screen and (min-width:1024px) {
+    .panel-btn{
+        display: none;
+    }
+    body{
+        display: grid;
+        grid-template-columns: 80% 20%;
+        grid-template-rows: 4rem auto;
+        grid-template-areas: 
+        "header header"
+        "main   panel";
+    }
+    main{
+        grid-area: main;
+    }
+    .header{
+        grid-area: header;
+    }
+    .panel{
+        grid-area: panel;
+        align-self: start;
+        position: sticky;
+        top:4rem;
+        justify-content: flex-start;
+        background-color: var(--second-color);
+        transform: translate(0,0);
+        opacity: 1;
+        visibility: visible;
+    }
+    .menu{
+        justify-content: start;
+        text-align: right;
+    }
+    .menu a{
+        font-size: 1.3rem;
+        padding: .75rem;
+    }
+    .menu a:hover,
+    .menu a.active{
+        color: var(--second-color);
+        background-color: var(--main-color);
+    }
+    .scroll-top-btn{
+        right:initial;
+        left: calc(4.5rem + 1vw);
+        
+    }
+
+}
+/*********** Video Inteligente *************/
+.video-int{
+    width: 80%;
+    height: auto;
+}
